Basket and Catalog APIs developed

--- a/src/Services/Basket/Bakset.API/appsettings.json
+++ b/src/Services/Basket/Bakset.API/appsettings.json
@@ -1,14 +1,10 @@
 {
-  "DatabaseSettings": {
-    "DatabaseName": "CatalogDb",
-    "ConnectionString": "mongodb://catalogdb:27017",
-    "CollectionName": "Products"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
